# mail-newletter

./: Cargo.toml  Dockerfile  flake.nix  readme.md  spec.yaml
.github/workflows/: rust.yml
configuration/: base.yaml
migrations/: 20240310112256_create_subscritions_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs  subscriptions_confirm.rs
